objects/Self_Hosted_License__c.object
<CustomObject>
    <description>A custom object to store the data from the self-hosted license server in the Salesforce environment.</description>
    <fields>
        <fullName>CodeScan_Org_Id__c</fullName>
        <externalId>true</externalId>
        <label>CodeScan Org Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OnPrem_Id__c</fullName>
        <externalId>true</externalId>
        <label>OnPrem_Id</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OnPrem_IdeCount__c</fullName>
        <label>OnPrem IDE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OnPrem_Is_Evaluation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OnPrem Is Evaluation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OnPrem_LastUsage__c</fullName>
        <label>OnPrem LastUsage</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OnPrem_LicenseIde__c</fullName>
        <label>OnPrem License Ide</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OnPrem_LicenseLoc__c</fullName>
        <label>OnPrem License Loc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OnPrem_LocAvg__c</fullName>
        <label>OnPrem LOC Avg</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OnPrem_LocMax__c</fullName>
        <label>OnPrem Loc MAX</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OnPrem_Notes__c</fullName>
        <label>OnPrem Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OnPrem_Projects__c</fullName>
        <label>OnPrem Projects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OnPrem_Valid_Till__c</fullName>
        <label>OnPrem Valid Till</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Subscription_Code__c</fullName>
        <description>Subscription Code from the self hosted license server</description>
        <label>Subscription Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Self Hosted License</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>OnPrem_LastUsage__c</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>Email__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Self_Hosted_Licenses_to_Filter</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>OnPrem_LastUsage__c</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>Email__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Email__c</field>
            <operation>contains</operation>
            <value>abbvie</value>
        </filters>
        <label>Self Hosted Licenses to Filter</label>
    </listViews>
    <nameField>
        <label>Self Hosted Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Self Hosted Licenses</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>